# quickwit

./: Cargo.toml
.github/workflows/: dockerhub.yaml
quickwit-actors/: Cargo.toml
quickwit-actors/src/: actor.rs  actor_handle.rs  async_actor.rs  clock.rs  lib.rs  observation.rs  sync_actor.rs  tests.rs
quickwit-cli/src/: lib.rs
quickwit-core/src/: test_utils.rs
quickwit-core/src/indexing/: document_indexer.rs  split.rs
quickwit-indexing/: Cargo.toml
quickwit-indexing/src/: campaign.rs  checkpoint.rs  lib.rs  split.rs
quickwit-indexing/src/actors/: indexer.rs  mod.rs  packager.rs  publisher.rs  source.rs  uploader.rs
quickwit-indexing/src/models/: batch.rs  indexed_split.rs  manifest.rs  mod.rs  packaged_split.rs  split_label.rs  uploaded_split.rs
quickwit-indexing/src/scheduling/: mod.rs  scheduler.rs  scheduler_config.rs  source_config.rs  source_indexing_config.rs  unique_queue.rs
quickwit-indexing/src/sources/: mod.rs  source.rs  source_params.rs
quickwit-metastore/: Cargo.toml
quickwit-metastore/src/: checkpoint.rs  lib.rs  metastore.rs
quickwit-metastore/src/metastore/: single_file_metastore.rs
quickwit-search/src/: client.rs  client_pool.rs  lib.rs  root.rs
quickwit-search/src/client_pool/: search_client_pool.rs
